Configure controllers to make HTTP access

--- a/src/views/admin/login.html
+++ b/src/views/admin/login.html
@@ -17,7 +17,7 @@
 </header>
 
 <div class="animated fadeIn">
-  <div class="app flex-row align-items-center" ng-controller="studentLogin">
+  <div class="app flex-row align-items-center" ng-controller="adminLogin">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8">
