--- a/src/views/student/login.html
+++ b/src/views/student/login.html
@@ -24,7 +24,7 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <h1>Sudent Login</h1>
+                <h1>Student Login</h1>
                 <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
