--- a/src/views/student/login.html
+++ b/src/views/student/login.html
@@ -30,13 +30,13 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username" ng-model=contactname>
+                  <input type="text" class="form-control" placeholder="Username" ng-model=studentUsername>
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password" ng-model=contactnumber>
+                  <input type="password" class="form-control" placeholder="Password" ng-model=studentPassword>
                 </div>
                 <div class="row">
                   <div class="col-6">
