--- a/src/views/student/layouts/navbar.html
+++ b/src/views/student/layouts/navbar.html
@@ -13,13 +13,13 @@
   <ul class="nav navbar-nav ml-auto d-md-down-none">
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        <img src="img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+        <img src="img/avatars/studentAvatar.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
       </a>
       <div class="dropdown-menu dropdown-menu-right">
         <div class="dropdown-header text-center">
           <strong>Account</strong>
         </div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{userName}}</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{studentData.firstName}}</a>
         <a class="dropdown-item" href="javascript:void(0)" ng-controller=studentLogin ng-click="logout()">
           <i class="fa fa-lock"></i> Logout</a>
       </div>
