--- a/src/views/student/layouts/sidebar-nav.html
+++ b/src/views/student/layouts/sidebar-nav.html
@@ -7,14 +7,6 @@
 
       <li class="divider"></li>
       <li class="nav-title">
-        Course Preferences
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.widgets"><i class="icon-calculator"></i> Select preferences</a>
-      </li>
-      <li class="divider"></li>
-      <li class="nav-title">
         Courses Information
       </li>
 
@@ -22,6 +14,14 @@
         <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-pie-chart"></i> Courses available</a>
       </li>
 
+      <li class="divider"></li>
+      <li class="nav-title">
+        Course Registration
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.widgets"><i class="icon-calculator"></i> Register to courses</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i> View Schedule</a>
       </li>
