Create the folders structure/routes and add examples for the cruds of admin dashboard...

--- a/src/views/admin/layouts/full.html
+++ b/src/views/admin/layouts/full.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <div ng-include="'views/admin/layouts/navbar.html'" include-replace></div>
-<div class="app-body" style="margin-top: 0px;">
+<div class="app-body" style="margin-top: 0px; padding-top: 55px">
   <!-- Navigation -->
   <div ng-include="'views/admin/layouts/sidebar-nav.html'" include-replace></div>
   <!-- Main content -->
