--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -3,7 +3,7 @@
     <ul class="nav">
 
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.main"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard"><i class="icon-speedometer"></i> Dashboard Admin</a>
       </li>
 
       <li class="divider"></li>
@@ -11,7 +11,8 @@
         Users management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Students</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.students">
+          <i class="icon-star"></i>Students</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Faculty</a>
