--- a/src/views/faculty/teste02.html
+++ b/src/views/faculty/teste02.html
@@ -1,1 +1,1 @@
-<div class="animated fadeIn" style="margin-top: 55px;"> Courses preferences shown here! </div>
+<div class="animated fadeIn"> Courses preferences shown here! </div>
