--- a/src/views/faculty/teste.html
+++ b/src/views/faculty/teste.html
@@ -1,1 +1,1 @@
-<div class="animated fadeIn" style="margin-top: 55px;"> Blocks preferences shown here! </div>
+<div class="animated fadeIn"> Blocks preferences shown here! </div>
