--- a/src/views/faculty/teste03.html
+++ b/src/views/faculty/teste03.html
@@ -1,1 +1,1 @@
-<div class="animated fadeIn" style="margin-top: 55px;"> Professor schedule shown here! </div>
+<div class="animated fadeIn"> Professor schedule shown here! </div>
