Create the rest of the logins using the API

--- a/src/views/faculty/layouts/navbar.html
+++ b/src/views/faculty/layouts/navbar.html
@@ -19,7 +19,7 @@
         <div class="dropdown-header text-center">
           <strong>Account</strong>
         </div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{facultyName}}</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{facultyData.firstName}}</a>
         <a class="dropdown-item" href="javascript:void(0)" ng-controller=facultyLogin ng-click="logout()">
           <i class="fa fa-lock"></i> Logout</a>
       </div>
