--- a/src/views/admin/layouts/navbar.html
+++ b/src/views/admin/layouts/navbar.html
@@ -19,7 +19,7 @@
         <div class="dropdown-header text-center">
           <strong>Account</strong>
         </div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{adminName}}</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{adminData.firstName}}</a>
         <a class="dropdown-item" href="javascript:void(0)" ng-controller=adminLogin ng-click="logout()">
           <i class="fa fa-lock"></i> Logout</a>
       </div>
