--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10093,7 +10093,7 @@ base-chart.chart {
     padding-left: 7.5px; }
 
 .main .container-fluid {
-  padding: 0 30px; }
+  padding:30px; }
 
 .input-group-prepend,
 .input-group-append {
