--- a/src/views/faculty/layouts/navbar.html
+++ b/src/views/faculty/layouts/navbar.html
@@ -20,7 +20,7 @@
           <strong>Account</strong>
         </div>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i>{{facultyData.firstName}}</a>
-        <a class="dropdown-item" href="javascript:void(0)" ng-controller=facultyLogin ng-click="logout()">
+        <a class="dropdown-item" href="javascript:void(0)" ng-click="logout()">
           <i class="fa fa-lock"></i> Logout</a>
       </div>
     </li>
