--- a/src/views/student/layouts/sidebar-nav.html
+++ b/src/views/student/layouts/sidebar-nav.html
@@ -11,7 +11,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-pie-chart"></i> Courses available</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.studentDashboard.availableCourses"><i class="icon-pie-chart"></i> Courses available</a>
       </li>
 
       <li class="divider"></li>
@@ -20,10 +20,10 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.widgets"><i class="icon-calculator"></i> Register to courses</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.studentDashboard.registerToCourses"><i class="icon-calculator"></i> Register to courses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i> View Schedule</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.studentDashboard.schedule"><i class="icon-star"></i> View Schedule</a>
       </li>
     </ul>
   </nav>
