--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -26,7 +26,7 @@
         Entries management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.widgets"><i class="icon-calculator"></i>Entries</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.entries"><i class="icon-calculator"></i>Entries</a>
       </li>
 
       <li class="divider"></li>
