integrate System Admin - course

--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -42,7 +42,7 @@
         Courses management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Courses</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.courses"><i class="icon-star"></i>Courses</a>
       </li>
 
       <li class="divider"></li>
