--- a/src/views/admin/course-crud/new.html
+++ b/src/views/admin/course-crud/new.html
@@ -1,64 +1,65 @@
-<header class="app-header navbar ng-scope">
-  <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#!/home"></a>
-  <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#!/student/login">Admin1</a>
-    </li>
-  </ul>
-</header>
-
-<div class="animated fadeIn">
-  <div class="app flex-row align-items-center" ng-controller="courseController">
-    <div class="container">
-      <div class="row justify-content-center">
-    	<div class="col-sm-6">
-	      <div class="card">
-	        <div class="card-header">
-	          <strong>Course</strong>
-	        </div>
-	        <div class="card-body">
-	          <div class="form-group">
-	            <label for="code">Code</label>
-	            <input type="text" class="form-control" ng-model="code" placeholder="Code">
-	          </div>
-	          <div class="form-group">
-	            <label for="name">Name</label>
-	            <input type="text" class="form-control" ng-model="name" placeholder="Name">
-	          </div>
-	          <div class="form-group">
-	            <label for="description">Description</label>
-	            <input type="text" class="form-control" ng-model="description" placeholder="Description">
-	          </div>
-	          <div class="form-group">
-	            <label for="courseLevel">Course Level</label>
-	            <input type="text" class="form-control" ng-model="courseLevel" placeholder="Course Level">
-	          </div>
-	          <div class="form-group row">
-	              <label class="col-md-3 col-form-label">Course Type</label>
-	              <div class="col-md-9 col-form-label">
-	                <div class="form-check form-check-inline mr-1">
-	                  <input class="form-check-input" type="radio" id="inline-radio1" value="option1" name="inline-radios">
-	                  <label class="form-check-label" for="inline-radio1">On Campus</label>
-	                </div>
-	                <div class="form-check form-check-inline mr-1">
-	                  <input class="form-check-input" type="radio" id="inline-radio2" value="option2" name="inline-radios">
-	                  <label class="form-check-label" for="inline-radio2">Off Campus</label>
-	                </div>
-	              </div>
-	            </div>
-	         </div>
-	        <div class="card-footer">
-	          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
-	          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
-	        </div>
-	        </div>
+<div class="animated fadeIn" ng-controller="adminCourse">
+	<div class="card">
+		<div class="card-header">
+		  <strong>Course</strong>
+		</div>
+		<div class="card-body">
+		  <div class="form-group">
+		    <label for="code">Code</label>
+		    <input type="text" class="form-control" ng-model="course.code" placeholder="Code">
+		  </div>
+		  <div class="form-group">
+		    <label for="name">Name</label>
+		    <input type="text" class="form-control" ng-model="course.name" placeholder="Name">
+		  </div>
+		  <div class="form-group">
+		    <label for="description">Description</label>
+		    <input type="text" class="form-control" ng-model="course.description" placeholder="Description">
+		  </div>
+		  <div class="form-group">
+		    <label for="courseLevel">Course Level</label>
+		    <input type="text" class="form-control" ng-model="course.course_level" placeholder="Course Level">
+		  </div>
+		<div class="form-group row">
+		      <label class="col-md-1 col-form-label">On Campus</label>
+		      <div class="col-md-9 col-form-label">
+		        <div class="form-check form-check-inline mr-3">
+		          <input type="radio" class="form-check-input" ng-model="course.on_campus" ng-value="true">
+		          <label class="form-check-label">Yes</label>
+		        </div>
+		        <div class="form-check form-check-inline mr-1">
+		          <input type="radio" class="form-check-input" ng-model="course.on_campus" ng-value="false">
+		          <label class="form-check-label">No</label>
+		        </div>
+		      </div>
+		    </div>
+		</div>
+		<div class="card-footer">
+         	<button 
+	         	type="submit" 
+	         	ng-click= "create()" 
+	         	class="btn btn-sm btn-primary" 
+	         	ng-hide="isUpdate">
+	          	<i class="fa fa-dot-circle-o"></i> 
+	          	Submit
+        	</button>
+         	<button 
+	         	type="submit" 
+	         	ng-click= "update()" 
+	         	class="btn btn-sm btn-primary" 
+	         	ng-hide="!isUpdate">
+	         	<i class="fa fa-dot-circle-o"></i>
+	         	Update
+        	</button>
+        	<button 
+	        	type="reset" 
+	        	ng-click= "cancel()"
+	        	class="btn btn-sm btn-danger">
+	        	<i class="fa fa-ban"></i> 
+	        	Cancel
+       		</button>
+        </div>
+	</div>
+</div>	
 	        
-	      </div>
-	    </div>
-      </div>
-    </div>
-  </div>
-</div>
+	     
