--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -15,7 +15,8 @@
           <i class="icon-star"></i>Students</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Faculty</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.faculties">
+          <i class="icon-star"></i>Faculty</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Admins</a>
