--- a/src/views/admin/student-crud/list.html
+++ b/src/views/admin/student-crud/list.html
@@ -12,6 +12,7 @@
           <table class="table table-striped">
             <thead>
               <tr>
+                <th>ID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Nationality</th>
@@ -23,6 +24,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="student in students">
+                <td>{{ student.id }} </td>
                 <td>{{ student.firstName }} </td>
                 <td>{{ student.lastName }} </td>
                 <td>{{ student.nacionality }}</td>
