--- a/src/views/admin/admin-crud/new.html
+++ b/src/views/admin/admin-crud/new.html
@@ -1,54 +1,46 @@
-<header class="app-header navbar ng-scope">
-  <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#!/home"></a>
-  <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#!/faculty/login">Admin1</a>
-    </li>
-  </ul>
-</header>
-
-<div class="animated fadeIn">
-  <div class="app flex-row align-items-center" ng-controller="adminController">
-    <div class="container">
-      <div class="row justify-content-center">
-    	<div class="col-sm-6">
-	      <div class="card">
-	        <div class="card-header">
-	          <strong>System Admin</strong>
-	        </div>
-	        <div class="card-body">
-	          <div class="form-group">
-	            <label for="firstName">First Name</label>
-	            <input type="text" class="form-control" ng-model="firstName" placeholder="Enter your first name">
-	          </div>
-	          <div class="form-group">
-	            <label for="lastName">Last Name</label>
-	            <input type="text" class="form-control" ng-model="lastName" placeholder="Enter your last name">
-	          </div>
-	          <div class="form-group">
-	            <label for="nationality">Nationality</label>
-	            <input type="text" class="form-control" ng-model="nationality" placeholder="Nationality">
-	          </div>
-	          <div class="form-group">
-	            <label for="email">Email</label>
-	            <input type="text" class="form-control" ng-model="email" placeholder="Email">
-	          </div>
-	          <div class="form-group">
-	            <label for="phone">Phone</label>
-	            <input type="text" class="form-control" ng-model="phone" placeholder="Phone">
-	          </div>
-	         </div>
-	         <div class="card-footer">
-	         	<button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
-	         	<button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
-	        </div>
-	        </div>
-	      </div>
-	    </div>
-      </div>
-    </div>
-  </div>
+<div class="animated fadeIn" ng-controller="adminAdmin">
+	<div class="card">
+		<div class="card-header">
+		  <strong>System Admin</strong>
+		</div>
+		<div class="card-body">
+		  <div class="form-group">
+		    <label for="firstName">First Name</label>
+		    <input type="text" class="form-control" ng-model="admin.firstName" placeholder="Enter your first name">
+		  </div>
+		  <div class="form-group">
+		    <label for="lastName">Last Name</label>
+		    <input type="text" class="form-control" ng-model="admin.lastName" placeholder="Enter your last name">
+		  </div>
+		  <div class="form-group">
+		    <label for="email">Email</label>
+		    <input type="text" class="form-control" ng-model="admin.email" placeholder="Enter your Email">
+		  </div>
+		</div>
+		<div class="card-footer">
+         	<button 
+	         	type="submit" 
+	         	ng-click= "create()" 
+	         	class="btn btn-sm btn-primary" 
+	         	ng-hide="isUpdate">
+	          	<i class="fa fa-dot-circle-o"></i> 
+	          	Submit
+        	</button>
+         	<button 
+	         	type="submit" 
+	         	ng-click= "update()" 
+	         	class="btn btn-sm btn-primary" 
+	         	ng-hide="!isUpdate">
+	         	<i class="fa fa-dot-circle-o"></i>
+	         	Update
+        	</button>
+        	<button 
+	        	type="reset" 
+	        	ng-click= "cancel()"
+	        	class="btn btn-sm btn-danger">
+	        	<i class="fa fa-ban"></i> 
+	        	Cancel
+       		</button>
+        </div>
+	</div>
 </div>
