--- a/src/views/admin/faculty-crud/new.html
+++ b/src/views/admin/faculty-crud/new.html
@@ -14,7 +14,7 @@
 		  </div>
 		  <div class="form-group">
 		    <label for="email">Email</label>
-		    <input type="text" class="form-control" ng-model="faculty.email" placeholder="Email">
+		    <input type="text" class="form-control" ng-model="faculty.email" placeholder="Enter your Email">
 		  </div>
 		</div>
 		<div class="card-footer">
