--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -19,7 +19,8 @@
           <i class="icon-star"></i>Faculty</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Admins</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.admins">
+          <i class="icon-star"></i>Admins</a>
       </li>
 
       <li class="divider"></li>
