--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -28,7 +28,8 @@
         Entries management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.entries"><i class="icon-calculator"></i>Entries</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.entries">
+          <i class="icon-calculator"></i>Entries</a>
       </li>
 
       <li class="divider"></li>
@@ -36,7 +37,8 @@
         Blocks management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-pie-chart"></i> Blocks</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.blocks">
+          <i class="icon-pie-chart"></i> Blocks</a>
       </li>
 
       <li class="divider"></li>
