Integrate System Admin - Section

--- a/src/views/admin/layouts/sidebar-nav.html
+++ b/src/views/admin/layouts/sidebar-nav.html
@@ -54,7 +54,8 @@
         Sections management
       </li>
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.charts"><i class="icon-star"></i>Sections</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.adminDashboard.sections">
+          <i class="icon-star"></i>Sections</a>
       </li>
     </ul>
   </nav>
