Finishing registration feature

--- a/src/views/student/schedule.html
+++ b/src/views/student/schedule.html
@@ -16,10 +16,10 @@
 
 				<tbody>
 					<tr ng-repeat="course in responseData">
-						<td> {{ course.description }} </td>
+						<td> {{ course.block_description }} </td>
 						<td> {{ course.course_code }} </td>
 						<td> {{ course.course_name }} </td>
-						<td> {{ course.professor }} </td>
+						<td> {{ course.faculty_name }} </td>
 						<td> {{ course.start_date }} </td>
 					</tr>
 				</tbody>
