--- a/src/views/admin/admin-crud/list.html
+++ b/src/views/admin/admin-crud/list.html
@@ -21,7 +21,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="admin in admins">
-                <td>{{ admin.id }}</td>
+                <td>{{ $index+1 }}</td>
                 <td>{{ admin.firstName }} </td>
                 <td>{{ admin.lastName }} </td>
                 <td>{{ admin.email }}</td>
