--- a/src/views/admin/course-crud/list.html
+++ b/src/views/admin/course-crud/list.html
@@ -23,7 +23,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="course in courses">
-                <td>{{ course.id }} </td>
+                <td>{{ $index+1 }} </td>
                 <td>{{ course.code }} </td>
                 <td>{{ course.name }} </td>
                 <td>{{ course.description }}</td>
