--- a/src/views/admin/student-crud/list.html
+++ b/src/views/admin/student-crud/list.html
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="student in students">
-                <td>{{ student.id }} </td>
+                <td>{{ $index+1 }} </td>
                 <td>{{ student.firstName }} </td>
                 <td>{{ student.lastName }} </td>
                 <td>{{ student.nacionality }}</td>
